--- a/app/src/main/res/layout/activity_mode_classic.xml
+++ b/app/src/main/res/layout/activity_mode_classic.xml
@@ -35,6 +35,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/text_switch_add"
+                android:textColor="@android:color/black"
                 android:textSize="@dimen/text_classic_mode"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -66,6 +67,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/text_switch_mult"
+                android:textColor="@android:color/black"
                 android:textSize="@dimen/text_classic_mode"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -97,6 +99,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/text_switch_pow"
+                android:textColor="@android:color/black"
                 android:textSize="@dimen/text_classic_mode"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -127,6 +130,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="@string/select_num_oper"
+                android:textColor="@android:color/black"
                 android:textSize="@dimen/text_classic_mode" />
 
             <co.ceryle.segmentedbutton.SegmentedButtonGroup
@@ -147,7 +151,7 @@
                 app:sbg_rippleColor="@android:color/darker_gray"
                 app:sbg_selectorColor="@android:color/holo_blue_dark"
                 app:sbg_selectorTextColor="@android:color/white"
-                app:sbg_shadow="true"
+                app:sbg_shadow="false"
                 app:sbg_shadowElevation="3dp"
                 app:sbg_shadowMargin="4dp">
 
@@ -155,22 +159,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="10dp"
-                    android:text="1"
-                    android:textAllCaps="false" />
+                    android:text="1" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="10dp"
-                    android:text="2"
-                    android:textAllCaps="false" />
+                    android:text="2" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minHeight="10dp"
-                    android:text="3"
-                    android:textAllCaps="false" />
+                    android:text="3" />
+
 
             </co.ceryle.segmentedbutton.SegmentedButtonGroup>
 
@@ -178,31 +180,42 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="384dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:orientation="horizontal"
+    <co.ceryle.segmentedbutton.SegmentedButtonGroup
+        android:id="@+id/b"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:sbg_animateSelector="fastOutSlowIn"
+        app:sbg_animateSelectorDuration="1000"
+        app:sbg_backgroundColor="@android:color/white"
+        app:sbg_dividerColor="@android:color/darker_gray"
+        app:sbg_dividerPadding="0dp"
+        app:sbg_dividerRadius="0dp"
+        app:sbg_dividerSize="1dp"
+        app:sbg_position="0"
+        app:sbg_radius="0dp"
+        app:sbg_ripple="true"
+        app:sbg_rippleColor="@android:color/darker_gray"
+        app:sbg_selectorColor="@android:color/holo_blue_light"
+        app:sbg_selectorTextColor="@android:color/white"
+        app:sbg_shadow="false"
+        app:sbg_shadowElevation="3dp"
+        app:sbg_shadowMargin="4dp"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1">
 
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.03"
-            android:background="@drawable/gradient"
-            android:text="@string/begin"
-            android:textColor="@android:color/white"
-            tools:layout_editor_absoluteX="4dp"
-            tools:layout_editor_absoluteY="-66dp" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:text="@string/begin" />
+    </co.ceryle.segmentedbutton.SegmentedButtonGroup>
 
 
 </android.support.constraint.ConstraintLayout>
